# ResuMap

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  uv.md
.devcontainer/: devcontainer.json
app/: config.py  dependencies.py  main.py  models.py
app/core/: templates.py
app/routers/: extract.py
app/services/: extraction.py  file_parser.py  llm.py  sliding_window.py
devcontainer/: devcontainer.json
models/: NuExtract-1.5-tiny.Q8_0.gguf
scripts/: download_model.py
train/: finetune_nuextract_resume_unsloth_qlora.ipynb
train/data/: train.jsonl
